--- a/Stage-03/Responsividade/Desafio-01/index.html
+++ b/Stage-03/Responsividade/Desafio-01/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+  <html lang="pt-br">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>receita cheesecake</title>
+    <title>cheesecake</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,400;8..60,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -15,7 +15,7 @@
     <main>
       <div class="recipe">
         <h1>Cheesecake de Frutas</h1>
-        <img src="./img/cheesecake.png" alt="desenho de um pedaço de cheesecake de fruta num prato branco">
+        <img src="./img/cheesecake.png" alt="cheesecake de frutas num prato branco">
         <p>
           Essa receita de cheesecake de frutas vermelhas é simplesmente deliciosa! A combinação do doce do morango com o sabor levemente ácido do mirtilo cria uma sobremesa fresca e equilibrada. Além disso, a textura cremosa do cheesecake contrasta perfeitamente com a crocância da base de biscoitos. Se você está procurando uma sobremesa fácil de fazer e que impressione seus convidados, essa é a receita ideal.
         </p>
@@ -34,26 +34,27 @@
           <li>1 xícara de morangos picados</li>
           <li>1 xícara de mirtilos</li>
         </ul>
+
         <strong>Modo de Preparo:</strong>
         <ol>
           <li>
-            Triture os biscoitos e misture com a manteiga derretida. Forre uma
-            forma e leve à geladeira.
+            Triture os biscoitos e misture com a manteiga derretida. Forre uma forma e leve à geladeira.
           </li>
           <li>
-            Bata o cream cheese, leite condensado e suco de limão. Adicione a
-            gelatina dissolvida.
+            Bata o cream cheese, leite condensado e suco de limão. Adicione a gelatina dissolvida.
+          </li>
+          <li>
+            Cubra com as frutas e sirva gelado.
           </li>
           <li>
             Despeje sobre a base de biscoitos e leve à geladeira por 2 horas.
           </li>
-          <li>Cubra com as frutas e sirva gelado.</li>
         </ol>
-
-        <button>Reportar Erro</button>
-      </div>
+        <button>
+          Reportar erro
+        </button>
       </div>
     </main>
-    
+
   </body>
 </html>
